--- a/css/style.css
+++ b/css/style.css
@@ -1,75 +1,118 @@
-:root{
+:root {
     --color-gray-text: #6f6f6f0d;
     --color-gray-line: #fffefe00;
-    --color-blak: ##0000004a;
+    --color-blak: #0000004a;
 }
-*{
+
+* {
     font-family: 'Italianno', cursive;
-    color: var(--color-gray-text);
 
 }
-.container{
+
+.container {
     margin: auto;
     padding: 0 30px;
 }
-.center-po{
+
+.center-po {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.center-fl{
+
+.center-fl {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-body{
+
+.main-link {
+    text-decoration: none;
+
+}
+
+body {
     width: 100%;
     height: 100vh;
-    background-image: url(/img/bg_vaiolin.jpg);
+    background-image: url(img/bg_vaiolin.jpg);
     background-position: cover;
 }
-.main{
+
+.main {
     width: 80%;
     height: 80%;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgb(143 143 143 / 10%);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 10px;
 }
-.main-input{
+
+.main-input {
     background-color: var(--color-blak);
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    color: var(--color-gray-text);
+    border-top-right-radius: 27px;
+    border-bottom-left-radius: 27px;
+    color: white;
     width: 100%;
     height: 60px;
     padding: 0 25px;
-    margin: 0 20px;
-    border-bottom: solid 1px #ffffff0f;
-    border-right: solid 1px #ffffff17;
-    border-top: solid 1px #0000004f;
-    border-left: solid 1px #0000001a;
+    border-bottom: solid 1px #ffffff21;
+    border-right: solid 1px #000000;
+    border-top: solid 1px #000000;
+    border-left: solid 1px #ffffff0f;
+    font-size: 20px;
 }
-.main-input:focus{
+
+.main-input:focus {
     box-shadow: none;
-    border-bottom: solid 1px #ffffff0f;
-    border-right: solid 1px #ffffff17;
-    border-top: solid 1px #0000004f;
-    border-left: solid 1px #0000001a;
+    border-color: black 1px solid;
 }
-.main-btn{
+
+.main-btn {
+    width: 17%;
+    height: 45px;
     background-color: var(--color-blak);
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
-    color: var(--color-gray-text);
-    width: 17%;
-    height: 45px;
+    color: #6b6b6b;
     padding: 0 25px;
-    margin: 0 20px;
-    border-bottom: solid 1px #ffffff0f;
-    border-right: solid 1px #ffffff17;
-    border-top: solid 1px #0000004f;
-    border-left: solid 1px #0000001a;
+    border-bottom: solid 1px #ffffff21;
+    border-right: solid 1px #000000;
+    border-top: solid 1px #000000;
+    border-left: solid 1px #ffffff0f;
+}
+
+.mina-bg-color {
+    background: #00000073;
+    border-bottom-right-radius: 50px;
+    border-top-left-radius: 50px;
+}
+
+.main-line {
+    box-shadow: 0px 5px 9px -2px blue;
+    width: 60%;
+    border: 3px #ffffff00 solid;
+    margin: auto;
+
+}
+
+.main-icon {
+    width: 80px;
+    height: 45px;
+    background-color: var(--color-blak);
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
+    color: white;
+    padding: 10px;
+    margin: 0 10px;
+    box-shadow: -1px 2px 18px -6px blue;
+}
+
+.main-link {
+    font-size: 22px;
+}
+
+.main-color-text {
+    color: #6b6b6b;
 }
