--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
     width: 100%;
     height: 100vh;
     background-image: url("../img/bg_vaiolin.jpg");
-    background-position: cover;
+    background-position: center;
 }
 
 .main {
